name:                exDB
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exDB#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable exDB
  hs-source-dirs:      src
  other-modules:       ConfigMod
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       -- Database stuff
                     , persistent 
                     , persistent-template 
                     , persistent-postgresql
                     , monad-logger
                     , transformers
                     , resourcet
